# pyclight

./: README.md  flake.nix  pyproject.toml
pyclight/: __main__.py  clight.py
