[tool.poetry]
name = "pyclight"
version = "0.1.0"
description = ""
authors = ["betaboon <betaboon@0x80.ninja>"]

[tool.poetry.dependencies]
python = "^3.9"
dbus-next = "^0.2.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.poetry.scripts]
pyclight = 'pyclight.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
